update method names to camel case

--- a/examples/Hydrological model/Note books/Jiboa-distributed-model-muskingum-lake.ipynb
+++ b/examples/Hydrological model/Note books/Jiboa-distributed-model-muskingum-lake.ipynb
@@ -123,13 +123,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-19 23:32:59.351 | DEBUG    | catchment:ReadRainfall:200 - Rainfall data are read successfully\n",
-      "2022-03-19 23:33:05.199 | DEBUG    | catchment:ReadTemperature:253 - Temperature data are read successfully\n",
-      "2022-03-19 23:33:12.814 | DEBUG    | catchment:ReadET:295 - Potential Evapotranspiration data are read successfully\n",
-      "2022-03-19 23:33:12.846 | DEBUG    | catchment:ReadFlowAcc:387 - Flow Accmulation input is read successfully\n",
-      "2022-03-19 23:33:12.846 | DEBUG    | catchment:ReadFlowDir:441 - Flow Direction input is read successfully\n",
-      "2022-03-19 23:33:12.877 | DEBUG    | catchment:ReadParameters:624 - Parameters are read successfully\n",
-      "2022-03-19 23:33:12.877 | DEBUG    | catchment:ReadLumpedModel:678 - Lumped model is read successfully\n"
+      "2022-03-19 23:32:59.351 | DEBUG    | catchment:readRainfall:200 - Rainfall data are read successfully\n",
+      "2022-03-19 23:33:05.199 | DEBUG    | catchment:readTemperature:253 - Temperature data are read successfully\n",
+      "2022-03-19 23:33:12.814 | DEBUG    | catchment:readET:295 - Potential Evapotranspiration data are read successfully\n",
+      "2022-03-19 23:33:12.846 | DEBUG    | catchment:readFlowAcc:387 - Flow Accmulation input is read successfully\n",
+      "2022-03-19 23:33:12.846 | DEBUG    | catchment:readFlowDir:441 - Flow Direction input is read successfully\n",
+      "2022-03-19 23:33:12.877 | DEBUG    | catchment:readParameters:624 - Parameters are read successfully\n",
+      "2022-03-19 23:33:12.877 | DEBUG    | catchment:readLumpedModel:678 - Lumped model is read successfully\n"
      ]
     }
    ],
@@ -144,14 +144,14 @@
     "name = \"Jiboa\"\n",
     "Jiboa = Catchment(name, start_date, end_date, SpatialResolution=\"Distributed\",\n",
     "                  TemporalResolution=\"Hourly\", fmt='%Y-%m-%d %H:%M:%S')\n",
-    "Jiboa.ReadRainfall(PrecPath)\n",
-    "Jiboa.ReadTemperature(TempPath)\n",
-    "Jiboa.ReadET(Evap_Path)\n",
-    "Jiboa.ReadFlowAcc(FlowAccPath)\n",
-    "Jiboa.ReadFlowDir(FlowDPath)\n",
-    "Jiboa.ReadParameters(ParPath, Snow)\n",
+    "Jiboa.readRainfall(PrecPath)\n",
+    "Jiboa.readTemperature(TempPath)\n",
+    "Jiboa.readET(Evap_Path)\n",
+    "Jiboa.readFlowAcc(FlowAccPath)\n",
+    "Jiboa.readFlowDir(FlowDPath)\n",
+    "Jiboa.readParameters(ParPath, Snow)\n",
     "\n",
-    "Jiboa.ReadLumpedModel(HBV, AreaCoeff, InitialCond)"
+    "Jiboa.readLumpedModel(HBV, AreaCoeff, InitialCond)"
    ]
   },
   {
@@ -184,9 +184,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-19 23:33:53.060 | DEBUG    | catchment:ReadMeteoData:1584 - Lake Meteo data are read successfully\n",
-      "2022-03-19 23:33:53.060 | DEBUG    | catchment:ReadParameters:1603 - Lake Parameters are read successfully\n",
-      "2022-03-19 23:33:53.060 | DEBUG    | catchment:ReadLumpedModel:1668 - Lumped model is read successfully\n"
+      "2022-03-19 23:33:53.060 | DEBUG    | catchment:readMeteoData:1584 - Lake Meteo data are read successfully\n",
+      "2022-03-19 23:33:53.060 | DEBUG    | catchment:readParameters:1603 - Lake Parameters are read successfully\n",
+      "2022-03-19 23:33:53.060 | DEBUG    | catchment:readLumpedModel:1668 - Lumped model is read successfully\n"
      ]
     }
    ],
@@ -208,15 +208,15 @@
     "JiboaLake = Lake(start=start_date, end=end_date, fmt='%Y.%m.%d %H:%M:%S',\n",
     "                 TemporalResolution=\"Hourly\", Split=True)\n",
     "\n",
-    "JiboaLake.ReadMeteoData(LakeMeteoPath, fmt='%d.%m.%Y %H:%M')\n",
-    "JiboaLake.ReadParameters(LakeParametersPath)\n",
+    "JiboaLake.readMeteoData(LakeMeteoPath, fmt='%d.%m.%Y %H:%M')\n",
+    "JiboaLake.readParameters(LakeParametersPath)\n",
     "\n",
     "StageDischargeCurve = np.loadtxt(\"inputs/Hapi/meteodata/curve.txt\")\n",
     "LakeInitCond = np.loadtxt(\"inputs/Hapi/meteodata/Initia-lake.txt\", usecols=0).tolist()\n",
     "LakeCatArea = 133.98\n",
     "LakeArea = 70.64\n",
     "Snow = 0\n",
-    "JiboaLake.ReadLumpedModel(HBVLake, LakeCatArea, LakeArea, LakeInitCond,\n",
+    "JiboaLake.readLumpedModel(HBVLake, LakeCatArea, LakeArea, LakeInitCond,\n",
     "                          OutflowCell, StageDischargeCurve, Snow)"
    ]
   },
@@ -236,16 +236,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-19 23:33:58.759 | DEBUG    | catchment:ReadGaugeTable:773 - Gauge Table is read successfully\n",
-      "2022-03-19 23:33:59.040 | DEBUG    | catchment:ReadDischargeGauges:867 - Gauges data are read successfully\n"
+      "2022-03-19 23:33:58.759 | DEBUG    | catchment:readGaugeTable:773 - Gauge Table is read successfully\n",
+      "2022-03-19 23:33:59.040 | DEBUG    | catchment:readDischargeGauges:867 - Gauges data are read successfully\n"
      ]
     }
    ],
    "source": [
     "Date1 = '14.06.2012 19:00'\n",
     "Date2 = '23.12.2013 00:00'\n",
-    "Jiboa.ReadGaugeTable(GaugesPath + \"GaugesTable.csv\", FlowAccPath)\n",
-    "Jiboa.ReadDischargeGauges(GaugesPath, column='id', fmt='%d.%m.%Y %H:%M',\n",
+    "Jiboa.readGaugeTable(GaugesPath + \"GaugesTable.csv\", FlowAccPath)\n",
+    "Jiboa.readDischargeGauges(GaugesPath, column='id', fmt='%d.%m.%Y %H:%M',\n",
     "                          Split=True, Date1=Date1, Date2=Date2)"
    ]
   },
@@ -270,7 +270,7 @@
     }
    ],
    "source": [
-    "Run.RunHAPIwithLake(Jiboa, JiboaLake)"
+    "Run.runHAPIwithLake(Jiboa, JiboaLake)"
    ]
   },
   {
@@ -302,7 +302,7 @@
     }
    ],
    "source": [
-    "Jiboa.ExtractDischarge(OnlyOutlet=True)\n",
+    "Jiboa.extractDischarge(OnlyOutlet=True)\n",
     "\n",
     "for i in range(len(Jiboa.GaugesTable)):\n",
     "    gaugeid = Jiboa.GaugesTable.loc[i, 'id']\n",
@@ -366,15 +366,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-19 23:34:29.223 | DEBUG    | catchment:PlotHydrograph:1142 - ----------------------------------\n",
-      "2022-03-19 23:34:29.223 | DEBUG    | catchment:PlotHydrograph:1143 - Gauge - 1\n",
-      "2022-03-19 23:34:29.223 | DEBUG    | catchment:PlotHydrograph:1144 - RMSE= 1.93\n",
-      "2022-03-19 23:34:29.223 | DEBUG    | catchment:PlotHydrograph:1145 - NSE= 0.48\n",
-      "2022-03-19 23:34:29.223 | DEBUG    | catchment:PlotHydrograph:1146 - NSEhf= 0.44\n",
-      "2022-03-19 23:34:29.223 | DEBUG    | catchment:PlotHydrograph:1147 - KGE= 0.54\n",
-      "2022-03-19 23:34:29.223 | DEBUG    | catchment:PlotHydrograph:1148 - WB= 72.44\n",
-      "2022-03-19 23:34:29.223 | DEBUG    | catchment:PlotHydrograph:1149 - Pearson-CC= 0.62\n",
-      "2022-03-19 23:34:29.223 | DEBUG    | catchment:PlotHydrograph:1152 - R2= 0.48\n"
+      "2022-03-19 23:34:29.223 | DEBUG    | catchment:plotHydrograph:1142 - ----------------------------------\n",
+      "2022-03-19 23:34:29.223 | DEBUG    | catchment:plotHydrograph:1143 - Gauge - 1\n",
+      "2022-03-19 23:34:29.223 | DEBUG    | catchment:plotHydrograph:1144 - RMSE= 1.93\n",
+      "2022-03-19 23:34:29.223 | DEBUG    | catchment:plotHydrograph:1145 - NSE= 0.48\n",
+      "2022-03-19 23:34:29.223 | DEBUG    | catchment:plotHydrograph:1146 - NSEhf= 0.44\n",
+      "2022-03-19 23:34:29.223 | DEBUG    | catchment:plotHydrograph:1147 - KGE= 0.54\n",
+      "2022-03-19 23:34:29.223 | DEBUG    | catchment:plotHydrograph:1148 - WB= 72.44\n",
+      "2022-03-19 23:34:29.223 | DEBUG    | catchment:plotHydrograph:1149 - Pearson-CC= 0.62\n",
+      "2022-03-19 23:34:29.223 | DEBUG    | catchment:plotHydrograph:1152 - R2= 0.48\n"
      ]
     },
     {
@@ -401,7 +401,7 @@
     "plotstart = \"2012-06-16\"\n",
     "plotend = \"2013-12-23\"\n",
     "\n",
-    "Jiboa.PlotHydrograph(plotstart, plotend, gaugei)"
+    "Jiboa.plotHydrograph(plotstart, plotend, gaugei)"
    ]
   },
   {
@@ -415,10 +415,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- To animate the distributed results you can use the `PlotDistributedResults` method \n",
+    "- To animate the distributed results you can use the `plotDistributedResults` method \n",
     "```\n",
     "=============================================================================\n",
-    "PlotDistributedResults(StartDate, EndDate, fmt=\"%Y-%m-%d\", Option = 1, Gauges=False, TicksSpacing = 2, Figsize=(8,8), PlotNumbers=True,\n",
+    "plotDistributedResults(StartDate, EndDate, fmt=\"%Y-%m-%d\", Option = 1, Gauges=False, TicksSpacing = 2, Figsize=(8,8), PlotNumbers=True,\n",
     "                    NumSize= 8, Title = 'Total Discharge',titlesize = 15, Backgroundcolorthreshold=None,\n",
     "                    cbarlabel = 'Discharge m3/s', cbarlabelsize = 12, textcolors=(\"white\",\"black\"),\n",
     "                    Cbarlength = 0.75, Interval = 200,cmap='coolwarm_r', Textloc=[0.1,0.2],\n",
@@ -427,7 +427,7 @@
     "                    **kwargs):\n",
     "=============================================================================\n",
     "\n",
-    "PlotDistributedResults animate the time series of the meteorological inputs and\n",
+    "plotDistributedResults animate the time series of the meteorological inputs and\n",
     "the result calculated by the model  like the total discharge, upper zone,\n",
     "and lower zone discharge and the state variables\n",
     "\n",
@@ -550,7 +550,7 @@
     "plotstart = \"2012-07-20\"\n",
     "plotend = \"2012-08-20\"\n",
     "\n",
-    "Anim = Jiboa.PlotDistributedResults(\n",
+    "Anim = Jiboa.plotDistributedResults(\n",
     "    plotstart, plotend, Figsize=(8, 8), Option=6, threshold=160, PlotNumbers=False, TicksSpacing=10, Interval=10,\n",
     "    Gauges=False, cmap='inferno', Textloc=[0.1, 0.2], Gaugecolor='red', ColorScale=2, IDcolor='blue', IDsize=25,\n",
     "    gamma=0.08)\n",
@@ -572,7 +572,7 @@
    "outputs": [],
    "source": [
     "Path = SaveTo + \"anim.mov\"\n",
-    "Jiboa.SaveAnimation(VideoFormat=\"mov\", Path=Path, SaveFrames=3)"
+    "Jiboa.saveAnimation(VideoFormat=\"mov\", Path=Path, SaveFrames=3)"
    ]
   },
   {
@@ -600,7 +600,7 @@
     "EndDate = \"2012-08-20\"\n",
     "\n",
     "Path = SaveTo + \"Lumped_Parameters_\" + str(dt.datetime.now())[0:10] + \"_\"\n",
-    "Jiboa.SaveResults(Result=1, StartDate=StartDate, EndDate=EndDate, Path=Path, FlowAccPath=FlowAccPath)"
+    "Jiboa.saveResults(Result=1, StartDate=StartDate, EndDate=EndDate, Path=Path, FlowAccPath=FlowAccPath)"
    ]
   }
  ],
