--- a/examples/Hydrological model/Note books/check-03Jiboa-colab.ipynb
+++ b/examples/Hydrological model/Note books/check-03Jiboa-colab.ipynb
@@ -142,7 +142,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# HAPI modules\n",
-    "from Hapi.run import RunHAPIwithLake\n",
+    "from Hapi.run import runHAPIwithLake\n",
     "import Hapi.hbv as HBV\n",
     "import Hapi.performancecriteria as Pf\n",
     "import Hapi.raster as Raster"
@@ -297,7 +297,7 @@
    "outputs": [],
    "source": [
     "Sim =pd.DataFrame(index = lakeCalib.index)\n",
-    "st, Sim['Q'], q_uz_routed, q_lz_trans = RunHAPIwithLake(HBV, Paths, ParPath, p2, init_st,\n",
+    "st, Sim['Q'], q_uz_routed, q_lz_trans = runHAPIwithLake(HBV, Paths, ParPath, p2, init_st,\n",
     "                                                     snow, lakeCalibArray, StageDischargeCurve,\n",
     "                                                     LakeParameters, lakecell,Lake_init_st)"
    ]
