--- a/examples/Hydrological model/Note books/check-03Jiboa.ipynb
+++ b/examples/Hydrological model/Note books/check-03Jiboa.ipynb
@@ -53,7 +53,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# HAPI modules\n",
-    "from Hapi.rrm import RunHAPIwithLake\n",
+    "from Hapi.rrm import runHAPIwithLake\n",
     "import Hapi.rrm.hbv as HBV\n",
     "import Hapi.sm.performancecriteria as Pf\n",
     "import Hapi.gis.raster as Raster"
@@ -142,7 +142,7 @@
    ],
    "source": [
     "Sim = pd.DataFrame(index=lakeCalib.index)\n",
-    "st, Sim['Q'], q_uz_routed, q_lz_trans = RunHAPIwithLake(HBV, Paths, ParPath, p2, init_st,\n",
+    "st, Sim['Q'], q_uz_routed, q_lz_trans = runHAPIwithLake(HBV, Paths, ParPath, p2, init_st,\n",
     "                                                        snow, lakeCalibArray, StageDischargeCurve,\n",
     "                                                        LakeParameters, lakecell, Lake_init_st)"
    ]
