--- a/examples/Hydrological model/Note books/check-colab/Coello.ipynb
+++ b/examples/Hydrological model/Note books/check-colab/Coello.ipynb
@@ -348,9 +348,9 @@
         "outputId": "755b079f-6888-42c7-de47-0cc8e2bb8142"
       },
       "source": [
-        "Coello.ReadRainfall(PrecPath)\n",
-        "Coello.ReadTemperature(TempPath)\n",
-        "Coello.ReadET(Evap_Path)"
+        "Coello.readRainfall(PrecPath)\n",
+        "Coello.readTemperature(TempPath)\n",
+        "Coello.readET(Evap_Path)"
       ],
       "execution_count": 29,
       "outputs": [
@@ -375,10 +375,10 @@
         "outputId": "63a3b020-04db-42f3-cb96-85ffa7217654"
       },
       "source": [
-        "Coello.ReadFlowAcc(FlowAccPath)\n",
-        "Coello.ReadFlowDir(FlowDPath)\n",
-        "Coello.ReadParameters(ParPathRun, Snow)\n",
-        "Coello.ReadLumpedModel(HBV, AreaCoeff, InitialCond)"
+        "Coello.readFlowAcc(FlowAccPath)\n",
+        "Coello.readFlowDir(FlowDPath)\n",
+        "Coello.readParameters(ParPathRun, Snow)\n",
+        "Coello.readLumpedModel(HBV, AreaCoeff, InitialCond)"
       ],
       "execution_count": 30,
       "outputs": [
@@ -404,9 +404,9 @@
         "outputId": "64932c46-e501-405e-b2cb-ef47c63259fa"
       },
       "source": [
-        "Coello.ReadGaugeTable(Path + \"/Data/00inputs/Discharge/stations/gauges.csv\", FlowAccPath)\n",
+        "Coello.readGaugeTable(Path + \"/Data/00inputs/Discharge/stations/gauges.csv\", FlowAccPath)\n",
         "GaugesPath = Path + \"/Data/00inputs/Discharge/stations/\"\n",
-        "Coello.ReadDischargeGauges(GaugesPath, column='id', fmt=\"%Y-%m-%d\")"
+        "Coello.readDischargeGauges(GaugesPath, column='id', fmt=\"%Y-%m-%d\")"
       ],
       "execution_count": 31,
       "outputs": [
@@ -453,7 +453,7 @@
         "outputId": "af225b7f-bcb3-46bd-d68f-c506c44bb92b"
       },
       "source": [
-        "Coello.ExtractDischarge(Factor=Coello.GaugesTable['area ratio'].tolist())\n",
+        "Coello.extractDischarge(Factor=Coello.GaugesTable['area ratio'].tolist())\n",
         "\n",
         "for i in range(len(Coello.GaugesTable)):\n",
         "    gaugeid = Coello.GaugesTable.loc[i,'id']\n",
@@ -546,7 +546,7 @@
         "plotstart = \"2009-01-01\"\n",
         "plotend = \"2011-12-31\"\n",
         "\n",
-        "Coello.PlotHydrograph(plotstart, plotend, gaugei)"
+        "Coello.plotHydrograph(plotstart, plotend, gaugei)"
       ],
       "execution_count": 34,
       "outputs": [
@@ -611,7 +611,7 @@
         "Option = 1\n",
         "threshold=10\n",
         "\n",
-        "Anim = Coello.PlotDistributedResults(plotstart, plotend, Figsize=(9,9), Option = Option, threshold=160, PlotNumbers=True,\n",
+        "Anim = Coello.plotDistributedResults(plotstart, plotend, Figsize=(9,9), Option = Option, threshold=160, PlotNumbers=True,\n",
         "                                TicksSpacing = 5,Interval = 200, Gauges=True, cmap='inferno', Textloc=[0.1,0.2],\n",
         "                                Gaugecolor='red',ColorScale = 2, IDcolor='blue', IDsize=25)\n",
         "HTML(Anim.to_html5_video())"
@@ -2577,7 +2577,7 @@
       },
       "source": [
         "Path = SaveTo + \"anim.mov\"\n",
-        "Coello.SaveAnimation(VideoFormat=\"mov\",Path=Path,SaveFrames=3)"
+        "Coello.saveAnimation(VideoFormat=\"mov\",Path=Path,SaveFrames=3)"
       ],
       "execution_count": null,
       "outputs": []
@@ -2592,7 +2592,7 @@
         "EndDate = \"2010-04-20\"\n",
         "Prefix = 'Qtot_'\n",
         "\n",
-        "Coello.SaveResults(FlowAccPath, Result=1, StartDate=StartDate, EndDate=EndDate, Path=SaveTo, Prefix=Prefix)"
+        "Coello.saveResults(FlowAccPath, Result=1, StartDate=StartDate, EndDate=EndDate, Path=SaveTo, Prefix=Prefix)"
       ],
       "execution_count": null,
       "outputs": []
