--- a/examples/Hydrological model/Note books/check-colab/Jiboa.ipynb
+++ b/examples/Hydrological model/Note books/check-colab/Jiboa.ipynb
@@ -341,14 +341,14 @@
     "name = \"Jiboa\"\n",
     "Jiboa = Catchment(name, Sdate, Edate, SpatialResolution = \"Distributed\",\n",
     "              TemporalResolution = \"Hourly\", fmt='%Y-%m-%d %H:%M:%S')\n",
-    "Jiboa.ReadRainfall(PrecPath)\n",
-    "Jiboa.ReadTemperature(TempPath)\n",
-    "Jiboa.ReadET(Evap_Path)\n",
-    "Jiboa.ReadFlowAcc(FlowAccPath)\n",
-    "Jiboa.ReadFlowDir(FlowDPath)\n",
-    "Jiboa.ReadParameters(ParPath, Snow)\n",
+    "Jiboa.readRainfall(PrecPath)\n",
+    "Jiboa.readTemperature(TempPath)\n",
+    "Jiboa.readET(Evap_Path)\n",
+    "Jiboa.readFlowAcc(FlowAccPath)\n",
+    "Jiboa.readFlowDir(FlowDPath)\n",
+    "Jiboa.readParameters(ParPath, Snow)\n",
     "\n",
-    "Jiboa.ReadLumpedModel(HBV, AreaCoeff, InitialCond)"
+    "Jiboa.readLumpedModel(HBV, AreaCoeff, InitialCond)"
    ],
    "execution_count": 55,
    "outputs": [
@@ -367,7 +367,7 @@
       "\u001B[0;32m<ipython-input-55-a408df4e07b4>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m()\u001B[0m\n\u001B[1;32m      9\u001B[0m Jiboa = Catchment(name, Sdate, Edate, SpatialResolution = \"Distributed\",\n\u001B[1;32m     10\u001B[0m               TemporalResolution = \"Hourly\", fmt='%Y-%m-%d %H:%M:%S')\n\u001B[0;32m---> 11\u001B[0;31m \u001B[0mJiboa\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mReadRainfall\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mPrecPath\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     12\u001B[0m \u001B[0mJiboa\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mReadTemperature\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mTempPath\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     13\u001B[0m \u001B[0mJiboa\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mReadET\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mEvap_Path\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
       "\u001B[0;32m/usr/local/lib/python3.7/dist-packages/Hapi/catchment.py\u001B[0m in \u001B[0;36mReadRainfall\u001B[0;34m(self, Path)\u001B[0m\n\u001B[1;32m    123\u001B[0m             \u001B[0;32massert\u001B[0m \u001B[0mlen\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mos\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mlistdir\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mPath\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;34m>\u001B[0m \u001B[0;36m0\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mPath\u001B[0m\u001B[0;34m+\u001B[0m\u001B[0;34m\" folder you have provided is empty\"\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    124\u001B[0m             \u001B[0;31m# read data\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 125\u001B[0;31m             \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mPrec\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mRaster\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mReadRastersFolder\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mPath\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    126\u001B[0m             \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mTS\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mPrec\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mshape\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m2\u001B[0m\u001B[0;34m]\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0;36m1\u001B[0m \u001B[0;31m# no of time steps =length of time series +1\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    127\u001B[0m             \u001B[0;32massert\u001B[0m \u001B[0mtype\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mPrec\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;34m==\u001B[0m \u001B[0mnp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mndarray\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m\"array should be of type numpy array\"\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
       "\u001B[0;32m/usr/local/lib/python3.7/dist-packages/Hapi/raster.py\u001B[0m in \u001B[0;36mReadRastersFolder\u001B[0;34m(path, WithOrder)\u001B[0m\n\u001B[1;32m   2257\u001B[0m                 \u001B[0mInputs\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mRenameFiles\u001B[0m \u001B[0mmethod\u001B[0m \u001B[0mto\u001B[0m \u001B[0msolve\u001B[0m \u001B[0mthis\u001B[0m \u001B[0missue\u001B[0m \u001B[0;32mand\u001B[0m \u001B[0mdon\u001B[0m\u001B[0;31m'\u001B[0m\u001B[0mt\u001B[0m \u001B[0minclude\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   2258\u001B[0m                 any other files in the folder with the rasters\"\"\"\n\u001B[0;32m-> 2259\u001B[0;31m                 \u001B[0;32massert\u001B[0m \u001B[0;32mFalse\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mErrorMsg\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m   2260\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   2261\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mAssertionError\u001B[0m: please include a number at the beginning of the\n                rasters name to indicate the order of the raster please use the\n                Inputs.RenameFiles method to solve this issue and don't include\n                any other files in the folder with the rasters"
+      "\u001B[0;31mAssertionError\u001B[0m: please include a number at the beginning of the\n                rasters name to indicate the order of the raster please use the\n                Inputs.renameFiles method to solve this issue and don't include\n                any other files in the folder with the rasters"
      ]
     }
    ]
@@ -484,7 +484,7 @@
    },
    "source": [
     "Sim =pd.DataFrame(index = lakeCalib.index)\n",
-    "st, Sim['Q'], q_uz_routed, q_lz_trans = RunHAPIwithLake(HBV, Paths, ParPath, p2, init_st,\n",
+    "st, Sim['Q'], q_uz_routed, q_lz_trans = runHAPIwithLake(HBV, Paths, ParPath, p2, init_st,\n",
     "                                                     snow, lakeCalibArray, StageDischargeCurve,\n",
     "                                                     LakeParameters, lakecell,Lake_init_st)"
    ],
