--- a/examples/Hydrological model/Note books/coello-distributed-model-calibratation-.ipynb
+++ b/examples/Hydrological model/Note books/coello-distributed-model-calibratation-.ipynb
@@ -130,23 +130,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-20 00:52:44.312 | DEBUG    | catchment:ReadRainfall:200 - Rainfall data are read successfully\n",
-      "2022-03-20 00:52:44.359 | DEBUG    | catchment:ReadTemperature:253 - Temperature data are read successfully\n",
-      "2022-03-20 00:52:44.406 | DEBUG    | catchment:ReadET:295 - Potential Evapotranspiration data are read successfully\n",
-      "2022-03-20 00:52:44.406 | DEBUG    | catchment:ReadFlowAcc:387 - Flow Accmulation input is read successfully\n",
-      "2022-03-20 00:52:44.422 | DEBUG    | catchment:ReadFlowDir:441 - Flow Direction input is read successfully\n",
-      "2022-03-20 00:52:44.422 | DEBUG    | catchment:ReadLumpedModel:678 - Lumped model is read successfully\n"
+      "2022-03-20 00:52:44.312 | DEBUG    | catchment:readRainfall:200 - Rainfall data are read successfully\n",
+      "2022-03-20 00:52:44.359 | DEBUG    | catchment:readTemperature:253 - Temperature data are read successfully\n",
+      "2022-03-20 00:52:44.406 | DEBUG    | catchment:readET:295 - Potential Evapotranspiration data are read successfully\n",
+      "2022-03-20 00:52:44.406 | DEBUG    | catchment:readFlowAcc:387 - Flow Accmulation input is read successfully\n",
+      "2022-03-20 00:52:44.422 | DEBUG    | catchment:readFlowDir:441 - Flow Direction input is read successfully\n",
+      "2022-03-20 00:52:44.422 | DEBUG    | catchment:readLumpedModel:678 - Lumped model is read successfully\n"
      ]
     }
    ],
    "source": [
-    "Coello.ReadRainfall(PrecPath)\n",
-    "Coello.ReadTemperature(TempPath)\n",
-    "Coello.ReadET(Evap_Path)\n",
+    "Coello.readRainfall(PrecPath)\n",
+    "Coello.readTemperature(TempPath)\n",
+    "Coello.readET(Evap_Path)\n",
     "\n",
-    "Coello.ReadFlowAcc(FlowAccPath)\n",
-    "Coello.ReadFlowDir(FlowDPath)\n",
-    "Coello.ReadLumpedModel(HBV, AreaCoeff, InitialCond)"
+    "Coello.readFlowAcc(FlowAccPath)\n",
+    "Coello.readFlowDir(FlowDPath)\n",
+    "Coello.readLumpedModel(HBV, AreaCoeff, InitialCond)"
    ]
   },
   {
@@ -159,14 +159,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-20 00:52:46.674 | DEBUG    | catchment:ReadParametersBounds:914 - Parameters bounds are read successfully\n"
+      "2022-03-20 00:52:46.674 | DEBUG    | catchment:readParametersBounds:914 - Parameters bounds are read successfully\n"
      ]
     }
    ],
    "source": [
     "UB = np.loadtxt(CalibPath + \"/UB - tot.txt\", usecols=0)\n",
     "LB = np.loadtxt(CalibPath + \"/LB - tot.txt\", usecols=0)\n",
-    "Coello.ReadParametersBounds(UB, LB, Snow)"
+    "Coello.readParametersBounds(UB, LB, Snow)"
    ]
   },
   {
@@ -236,15 +236,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-20 00:52:52.225 | DEBUG    | catchment:ReadGaugeTable:773 - Gauge Table is read successfully\n",
-      "2022-03-20 00:52:52.824 | DEBUG    | catchment:ReadDischargeGauges:867 - Gauges data are read successfully\n"
+      "2022-03-20 00:52:52.225 | DEBUG    | catchment:readGaugeTable:773 - Gauge Table is read successfully\n",
+      "2022-03-20 00:52:52.824 | DEBUG    | catchment:readDischargeGauges:867 - Gauges data are read successfully\n"
      ]
     }
    ],
    "source": [
-    "Coello.ReadGaugeTable(Path + \"/stations/gauges.csv\", FlowAccPath)\n",
+    "Coello.readGaugeTable(Path + \"/stations/gauges.csv\", FlowAccPath)\n",
     "GaugesPath = Path + \"/stations/\"\n",
-    "Coello.ReadDischargeGauges(GaugesPath, column='id', fmt=\"%Y-%m-%d\")"
+    "Coello.readDischargeGauges(GaugesPath, column='id', fmt=\"%Y-%m-%d\")"
    ]
   },
   {
@@ -297,7 +297,7 @@
     "\n",
     "\n",
     "def OF(Qobs, Qout, q_uz_routed, q_lz_trans, coordinates):\n",
-    "    Coello.ExtractDischarge()\n",
+    "    Coello.extractDischarge()\n",
     "    all_errors = []\n",
     "    # error for all internal stations\n",
     "    for i in range(len(coordinates)):\n",
@@ -308,7 +308,7 @@
     "    return error\n",
     "\n",
     "\n",
-    "Coello.ReadObjectiveFn(OF, OF_args)"
+    "Coello.readObjectiveFn(OF, OF_args)"
    ]
   },
   {
@@ -1563,7 +1563,7 @@
     }
    ],
    "source": [
-    "cal_parameters = Coello.RunCalibration(SpatialVarFun, OptimizationArgs,\n",
+    "cal_parameters = Coello.runCalibration(SpatialVarFun, OptimizationArgs,\n",
     "                                       printError=0)"
    ]
   },
@@ -1583,7 +1583,7 @@
    "outputs": [],
    "source": [
     "SpatialVarFun.Function(Coello.Parameters, kub=SpatialVarFun.Kub, klb=SpatialVarFun.Klb)\n",
-    "SpatialVarFun.SaveParameters(SaveTo)"
+    "SpatialVarFun.saveParameters(SaveTo)"
    ]
   }
  ],
