--- a/examples/Hydrological model/Note books/coello-distributed-model-run-muskingum.ipynb
+++ b/examples/Hydrological model/Note books/coello-distributed-model-run-muskingum.ipynb
@@ -112,13 +112,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-19 23:55:35.000 | DEBUG    | catchment:ReadRainfall:200 - Rainfall data are read successfully\n",
-      "2022-03-19 23:55:35.022 | DEBUG    | catchment:ReadTemperature:253 - Temperature data are read successfully\n",
-      "2022-03-19 23:55:35.058 | DEBUG    | catchment:ReadET:295 - Potential Evapotranspiration data are read successfully\n",
-      "2022-03-19 23:55:35.058 | DEBUG    | catchment:ReadFlowAcc:387 - Flow Accmulation input is read successfully\n",
-      "2022-03-19 23:55:35.074 | DEBUG    | catchment:ReadFlowDir:441 - Flow Direction input is read successfully\n",
-      "2022-03-19 23:55:35.074 | DEBUG    | catchment:ReadParameters:624 - Parameters are read successfully\n",
-      "2022-03-19 23:55:35.074 | DEBUG    | catchment:ReadLumpedModel:678 - Lumped model is read successfully\n"
+      "2022-03-19 23:55:35.000 | DEBUG    | catchment:readRainfall:200 - Rainfall data are read successfully\n",
+      "2022-03-19 23:55:35.022 | DEBUG    | catchment:readTemperature:253 - Temperature data are read successfully\n",
+      "2022-03-19 23:55:35.058 | DEBUG    | catchment:readET:295 - Potential Evapotranspiration data are read successfully\n",
+      "2022-03-19 23:55:35.058 | DEBUG    | catchment:readFlowAcc:387 - Flow Accmulation input is read successfully\n",
+      "2022-03-19 23:55:35.074 | DEBUG    | catchment:readFlowDir:441 - Flow Direction input is read successfully\n",
+      "2022-03-19 23:55:35.074 | DEBUG    | catchment:readParameters:624 - Parameters are read successfully\n",
+      "2022-03-19 23:55:35.074 | DEBUG    | catchment:readLumpedModel:678 - Lumped model is read successfully\n"
      ]
     }
    ],
@@ -133,14 +133,14 @@
     "end = \"2009-04-10\"\n",
     "name = \"Coello\"\n",
     "Coello = Catchment(name, start, end, SpatialResolution=\"Distributed\")\n",
-    "Coello.ReadRainfall(PrecPath)\n",
-    "Coello.ReadTemperature(TempPath)\n",
-    "Coello.ReadET(Evap_Path)\n",
+    "Coello.readRainfall(PrecPath)\n",
+    "Coello.readTemperature(TempPath)\n",
+    "Coello.readET(Evap_Path)\n",
     "\n",
-    "Coello.ReadFlowAcc(FlowAccPath)\n",
-    "Coello.ReadFlowDir(FlowDPath)\n",
-    "Coello.ReadParameters(ParPathRun, Snow)\n",
-    "Coello.ReadLumpedModel(HBV, AreaCoeff, InitialCond)"
+    "Coello.readFlowAcc(FlowAccPath)\n",
+    "Coello.readFlowDir(FlowDPath)\n",
+    "Coello.readParameters(ParPathRun, Snow)\n",
+    "Coello.readLumpedModel(HBV, AreaCoeff, InitialCond)"
    ]
   },
   {
@@ -161,15 +161,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-19 23:55:40.105 | DEBUG    | catchment:ReadGaugeTable:773 - Gauge Table is read successfully\n",
-      "2022-03-19 23:55:40.790 | DEBUG    | catchment:ReadDischargeGauges:867 - Gauges data are read successfully\n"
+      "2022-03-19 23:55:40.105 | DEBUG    | catchment:readGaugeTable:773 - Gauge Table is read successfully\n",
+      "2022-03-19 23:55:40.790 | DEBUG    | catchment:readDischargeGauges:867 - Gauges data are read successfully\n"
      ]
     }
    ],
    "source": [
-    "Coello.ReadGaugeTable(Path + \"/stations/gauges.csv\", FlowAccPath)\n",
+    "Coello.readGaugeTable(Path + \"/stations/gauges.csv\", FlowAccPath)\n",
     "GaugesPath = Path + \"/stations/\"\n",
-    "Coello.ReadDischargeGauges(GaugesPath, column='id', fmt=\"%Y-%m-%d\")"
+    "Coello.readDischargeGauges(GaugesPath, column='id', fmt=\"%Y-%m-%d\")"
    ]
   },
   {
@@ -347,7 +347,7 @@
     }
    ],
    "source": [
-    "Coello.ExtractDischarge()\n",
+    "Coello.extractDischarge()\n",
     "\n",
     "for i in range(len(Coello.GaugesTable)):\n",
     "    gaugeid = Coello.GaugesTable.loc[i, 'id']\n",
@@ -427,15 +427,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-19 23:56:20.760 | DEBUG    | catchment:PlotHydrograph:1142 - ----------------------------------\n",
-      "2022-03-19 23:56:20.760 | DEBUG    | catchment:PlotHydrograph:1143 - Gauge - 6\n",
-      "2022-03-19 23:56:20.760 | DEBUG    | catchment:PlotHydrograph:1144 - RMSE= 37.8\n",
-      "2022-03-19 23:56:20.760 | DEBUG    | catchment:PlotHydrograph:1145 - NSE= -3.75\n",
-      "2022-03-19 23:56:20.760 | DEBUG    | catchment:PlotHydrograph:1146 - NSEhf= -3.0\n",
-      "2022-03-19 23:56:20.760 | DEBUG    | catchment:PlotHydrograph:1147 - KGE= -0.4\n",
-      "2022-03-19 23:56:20.760 | DEBUG    | catchment:PlotHydrograph:1148 - WB= 92.8\n",
-      "2022-03-19 23:56:20.760 | DEBUG    | catchment:PlotHydrograph:1149 - Pearson-CC= 0.06\n",
-      "2022-03-19 23:56:20.760 | DEBUG    | catchment:PlotHydrograph:1152 - R2= -3.75\n"
+      "2022-03-19 23:56:20.760 | DEBUG    | catchment:plotHydrograph:1142 - ----------------------------------\n",
+      "2022-03-19 23:56:20.760 | DEBUG    | catchment:plotHydrograph:1143 - Gauge - 6\n",
+      "2022-03-19 23:56:20.760 | DEBUG    | catchment:plotHydrograph:1144 - RMSE= 37.8\n",
+      "2022-03-19 23:56:20.760 | DEBUG    | catchment:plotHydrograph:1145 - NSE= -3.75\n",
+      "2022-03-19 23:56:20.760 | DEBUG    | catchment:plotHydrograph:1146 - NSEhf= -3.0\n",
+      "2022-03-19 23:56:20.760 | DEBUG    | catchment:plotHydrograph:1147 - KGE= -0.4\n",
+      "2022-03-19 23:56:20.760 | DEBUG    | catchment:plotHydrograph:1148 - WB= 92.8\n",
+      "2022-03-19 23:56:20.760 | DEBUG    | catchment:plotHydrograph:1149 - Pearson-CC= 0.06\n",
+      "2022-03-19 23:56:20.760 | DEBUG    | catchment:plotHydrograph:1152 - R2= -3.75\n"
      ]
     },
     {
@@ -462,7 +462,7 @@
     "plotstart = \"2009-01-01\"\n",
     "plotend = \"2009-04-10\"\n",
     "\n",
-    "Coello.PlotHydrograph(plotstart, plotend, gaugei)"
+    "Coello.plotHydrograph(plotstart, plotend, gaugei)"
    ]
   },
   {
@@ -2125,7 +2125,7 @@
     "Option = 5\n",
     "threshold = 10\n",
     "\n",
-    "Anim = Coello.PlotDistributedResults(plotstart, plotend, Figsize=(9, 9), Option=Option, threshold=160,\n",
+    "Anim = Coello.plotDistributedResults(plotstart, plotend, Figsize=(9, 9), Option=Option, threshold=160,\n",
     "                                     PlotNumbers=False,\n",
     "                                     TicksSpacing=5, Interval=200, Gauges=True, cmap='inferno', Textloc=[0.1, 0.2],\n",
     "                                     Gaugecolor='red', ColorScale=2, IDcolor='blue', IDsize=25)\n",
@@ -2148,7 +2148,7 @@
    "outputs": [],
    "source": [
     "SaveTo = Path + \"anim.mov\"\n",
-    "Coello.SaveAnimation(VideoFormat=\"mov\", Path=SaveTo, SaveFrames=3)"
+    "Coello.saveAnimation(VideoFormat=\"mov\", Path=SaveTo, SaveFrames=3)"
    ]
   },
   {
@@ -2178,7 +2178,7 @@
     "EndDate = \"2010-04-20\"\n",
     "Prefix = 'Qtot_'\n",
     "SaveTo = Path + \"/results/\"\n",
-    "Coello.SaveResults(FlowAccPath, Result=1, StartDate=StartDate, EndDate=EndDate,\n",
+    "Coello.saveResults(FlowAccPath, Result=1, StartDate=StartDate, EndDate=EndDate,\n",
     "                   Path=SaveTo, Prefix=Prefix)"
    ]
   },
