--- a/examples/Hydrological model/Note books/coello-lumped-model-run-muskingum.ipynb
+++ b/examples/Hydrological model/Note books/coello-lumped-model-run-muskingum.ipynb
@@ -123,7 +123,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-20 00:08:44.371 | DEBUG    | catchment:ReadLumpedInputs:720 - Lumped Model inputs are read successfully\n"
+      "2022-03-20 00:08:44.371 | DEBUG    | catchment:readLumpedInputs:720 - Lumped Model inputs are read successfully\n"
      ]
     }
    ],
@@ -132,7 +132,7 @@
     "end = \"2011-12-31\"\n",
     "name = \"Coello\"\n",
     "Coello = Catchment(name, start, end)\n",
-    "Coello.ReadLumpedInputs(MeteoDataPath)"
+    "Coello.readLumpedInputs(MeteoDataPath)"
    ]
   },
   {
@@ -153,7 +153,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-20 00:08:48.044 | DEBUG    | catchment:ReadLumpedModel:678 - Lumped model is read successfully\n"
+      "2022-03-20 00:08:48.044 | DEBUG    | catchment:readLumpedModel:678 - Lumped model is read successfully\n"
      ]
     }
    ],
@@ -163,7 +163,7 @@
     "# [Snow pack, Soil moisture, Upper zone, Lower Zone, Water content]\n",
     "InitialCond = [0, 10, 10, 10, 0]\n",
     "\n",
-    "Coello.ReadLumpedModel(HBVLumped, AreaCoeff, InitialCond)"
+    "Coello.readLumpedModel(HBVLumped, AreaCoeff, InitialCond)"
    ]
   },
   {
@@ -184,13 +184,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-20 00:08:50.314 | DEBUG    | catchment:ReadParameters:624 - Parameters are read successfully\n"
+      "2022-03-20 00:08:50.314 | DEBUG    | catchment:readParameters:624 - Parameters are read successfully\n"
      ]
     }
    ],
    "source": [
     "Snow = 0  # no snow subroutine\n",
-    "Coello.ReadParameters(Parameterpath, Snow)"
+    "Coello.readParameters(Parameterpath, Snow)"
    ]
   },
   {
@@ -230,12 +230,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-20 00:08:54.915 | DEBUG    | catchment:ReadDischargeGauges:867 - Gauges data are read successfully\n"
+      "2022-03-20 00:08:54.915 | DEBUG    | catchment:readDischargeGauges:867 - Gauges data are read successfully\n"
      ]
     }
    ],
    "source": [
-    "Coello.ReadDischargeGauges(Path + \"Qout_c.csv\", fmt=\"%Y-%m-%d\")"
+    "Coello.readDischargeGauges(Path + \"Qout_c.csv\", fmt=\"%Y-%m-%d\")"
    ]
   },
   {
@@ -305,7 +305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Run.RunLumped(Coello, Route, RoutingFn)"
+    "Run.runLumped(Coello, Route, RoutingFn)"
    ]
   },
   {
@@ -371,8 +371,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-20 00:10:49.092 | DEBUG    | catchment:PlotHydrograph:1142 - ----------------------------------\n",
-      "2022-03-20 00:10:49.092 | DEBUG    | catchment:PlotHydrograph:1143 - Gauge - q\n"
+      "2022-03-20 00:10:49.092 | DEBUG    | catchment:plotHydrograph:1142 - ----------------------------------\n",
+      "2022-03-20 00:10:49.092 | DEBUG    | catchment:plotHydrograph:1143 - Gauge - q\n"
      ]
     },
     {
@@ -383,7 +383,7 @@
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
       "Input \u001B[1;32mIn [19]\u001B[0m, in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      2\u001B[0m plotstart \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m2009-01-01\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m      3\u001B[0m plotend \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m2011-12-31\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m----> 4\u001B[0m \u001B[43mCoello\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mPlotHydrograph\u001B[49m\u001B[43m(\u001B[49m\u001B[43mplotstart\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mplotend\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mgaugei\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mTitle\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mLumped Model\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32mC:\\MyComputer\\01Algorithms\\Hydrology\\Hapi\\Hapi\\catchment.py:1144\u001B[0m, in \u001B[0;36mCatchment.PlotHydrograph\u001B[1;34m(self, plotstart, plotend, gaugei, Hapicolor, gaugecolor, linewidth, Hapiorder, Gaugeorder, labelfontsize, XMajorfmt, Noxticks, Title, Xaxis_fmt, label, fmt)\u001B[0m\n\u001B[0;32m   1142\u001B[0m logger\u001B[38;5;241m.\u001B[39mdebug(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m----------------------------------\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m   1143\u001B[0m logger\u001B[38;5;241m.\u001B[39mdebug(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mGauge - \u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;241m+\u001B[39m \u001B[38;5;28mstr\u001B[39m(gaugeid))\n\u001B[1;32m-> 1144\u001B[0m logger\u001B[38;5;241m.\u001B[39mdebug(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mRMSE= \u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;241m+\u001B[39m \u001B[38;5;28mstr\u001B[39m(\u001B[38;5;28mround\u001B[39m(\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mMetrics\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mloc\u001B[49m[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mRMSE\u001B[39m\u001B[38;5;124m\"\u001B[39m, gaugeid], \u001B[38;5;241m2\u001B[39m)))\n\u001B[0;32m   1145\u001B[0m logger\u001B[38;5;241m.\u001B[39mdebug(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mNSE= \u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;241m+\u001B[39m \u001B[38;5;28mstr\u001B[39m(\u001B[38;5;28mround\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mMetrics\u001B[38;5;241m.\u001B[39mloc[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mNSE\u001B[39m\u001B[38;5;124m\"\u001B[39m, gaugeid], \u001B[38;5;241m2\u001B[39m)))\n\u001B[0;32m   1146\u001B[0m logger\u001B[38;5;241m.\u001B[39mdebug(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mNSEhf= \u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;241m+\u001B[39m \u001B[38;5;28mstr\u001B[39m(\u001B[38;5;28mround\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mMetrics\u001B[38;5;241m.\u001B[39mloc[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mNSEhf\u001B[39m\u001B[38;5;124m\"\u001B[39m, gaugeid], \u001B[38;5;241m2\u001B[39m)))\n",
+      "File \u001B[1;32mC:\\MyComputer\\01Algorithms\\Hydrology\\Hapi\\Hapi\\catchment.py:1144\u001B[0m, in \u001B[0;36mCatchment.plotHydrograph\u001B[1;34m(self, plotstart, plotend, gaugei, Hapicolor, gaugecolor, linewidth, Hapiorder, Gaugeorder, labelfontsize, XMajorfmt, Noxticks, Title, Xaxis_fmt, label, fmt)\u001B[0m\n\u001B[0;32m   1142\u001B[0m logger\u001B[38;5;241m.\u001B[39mdebug(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m----------------------------------\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m   1143\u001B[0m logger\u001B[38;5;241m.\u001B[39mdebug(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mGauge - \u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;241m+\u001B[39m \u001B[38;5;28mstr\u001B[39m(gaugeid))\n\u001B[1;32m-> 1144\u001B[0m logger\u001B[38;5;241m.\u001B[39mdebug(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mRMSE= \u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;241m+\u001B[39m \u001B[38;5;28mstr\u001B[39m(\u001B[38;5;28mround\u001B[39m(\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mMetrics\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mloc\u001B[49m[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mRMSE\u001B[39m\u001B[38;5;124m\"\u001B[39m, gaugeid], \u001B[38;5;241m2\u001B[39m)))\n\u001B[0;32m   1145\u001B[0m logger\u001B[38;5;241m.\u001B[39mdebug(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mNSE= \u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;241m+\u001B[39m \u001B[38;5;28mstr\u001B[39m(\u001B[38;5;28mround\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mMetrics\u001B[38;5;241m.\u001B[39mloc[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mNSE\u001B[39m\u001B[38;5;124m\"\u001B[39m, gaugeid], \u001B[38;5;241m2\u001B[39m)))\n\u001B[0;32m   1146\u001B[0m logger\u001B[38;5;241m.\u001B[39mdebug(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mNSEhf= \u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;241m+\u001B[39m \u001B[38;5;28mstr\u001B[39m(\u001B[38;5;28mround\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mMetrics\u001B[38;5;241m.\u001B[39mloc[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mNSEhf\u001B[39m\u001B[38;5;124m\"\u001B[39m, gaugeid], \u001B[38;5;241m2\u001B[39m)))\n",
       "\u001B[1;31mAttributeError\u001B[0m: 'NoneType' object has no attribute 'loc'"
      ]
     },
@@ -402,7 +402,7 @@
     "gaugei = 0\n",
     "plotstart = \"2009-01-01\"\n",
     "plotend = \"2011-12-31\"\n",
-    "Coello.PlotHydrograph(plotstart, plotend, gaugei, Title=\"Lumped Model\")"
+    "Coello.plotHydrograph(plotstart, plotend, gaugei, Title=\"Lumped Model\")"
    ]
   },
   {
@@ -423,7 +423,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 00:25:14.873 | DEBUG    | catchment:SaveResults:1366 - Data is saved successfully\n"
+      "2022-02-24 00:25:14.873 | DEBUG    | catchment:saveResults:1366 - Data is saved successfully\n"
      ]
     }
    ],
@@ -432,7 +432,7 @@
     "EndDate = \"2010-04-20\"\n",
     "\n",
     "Path = SaveTo + \"Results-Lumped-Model_\" + str(dt.datetime.now())[0:10] + \".txt\"\n",
-    "Coello.SaveResults(Result=5, start=StartDate, end=EndDate, Path=Path)"
+    "Coello.saveResults(Result=5, start=StartDate, end=EndDate, Path=Path)"
    ]
   }
  ],
