--- a/examples/Hydrological model/Note books/lumped-model-run-coello.ipynb
+++ b/examples/Hydrological model/Note books/lumped-model-run-coello.ipynb
@@ -122,7 +122,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 00:24:16.724 | DEBUG    | catchment:ReadLumpedInputs:635 - Lumped Model inputs are read successfully\n"
+      "2022-02-24 00:24:16.724 | DEBUG    | catchment:readLumpedInputs:635 - Lumped Model inputs are read successfully\n"
      ]
     }
    ],
@@ -131,7 +131,7 @@
     "end = \"2011-12-31\"\n",
     "name = \"Coello\"\n",
     "Coello = Catchment(name, start, end)\n",
-    "Coello.ReadLumpedInputs(MeteoDataPath)"
+    "Coello.readLumpedInputs(MeteoDataPath)"
    ]
   },
   {
@@ -152,7 +152,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 00:24:19.308 | DEBUG    | catchment:ReadLumpedModel:593 - Lumped model is read successfully\n"
+      "2022-02-24 00:24:19.308 | DEBUG    | catchment:readLumpedModel:593 - Lumped model is read successfully\n"
      ]
     }
    ],
@@ -162,7 +162,7 @@
     "# [Snow pack, Soil moisture, Upper zone, Lower Zone, Water content]\n",
     "InitialCond = [0, 10, 10, 10, 0]\n",
     "\n",
-    "Coello.ReadLumpedModel(HBVLumped, AreaCoeff, InitialCond)"
+    "Coello.readLumpedModel(HBVLumped, AreaCoeff, InitialCond)"
    ]
   },
   {
@@ -183,13 +183,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 00:24:21.601 | DEBUG    | catchment:ReadParameters:539 - Parameters are read successfully\n"
+      "2022-02-24 00:24:21.601 | DEBUG    | catchment:readParameters:539 - Parameters are read successfully\n"
      ]
     }
    ],
    "source": [
     "Snow = 0  # no snow subroutine\n",
-    "Coello.ReadParameters(Parameterpath, Snow)"
+    "Coello.readParameters(Parameterpath, Snow)"
    ]
   },
   {
@@ -229,12 +229,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 00:24:26.270 | DEBUG    | catchment:ReadDischargeGauges:781 - Gauges data are read successfully\n"
+      "2022-02-24 00:24:26.270 | DEBUG    | catchment:readDischargeGauges:781 - Gauges data are read successfully\n"
      ]
     }
    ],
    "source": [
-    "Coello.ReadDischargeGauges(Path + \"Qout_c.csv\", fmt=\"%Y-%m-%d\")"
+    "Coello.readDischargeGauges(Path + \"Qout_c.csv\", fmt=\"%Y-%m-%d\")"
    ]
   },
   {
@@ -288,7 +288,7 @@
     }
    ],
    "source": [
-    "Run.RunLumped(Coello, Route, RoutingFn)"
+    "Run.runLumped(Coello, Route, RoutingFn)"
    ]
   },
   {
@@ -373,7 +373,7 @@
     "gaugei = 0\n",
     "plotstart = \"2009-01-01\"\n",
     "plotend = \"2011-12-31\"\n",
-    "Coello.PlotHydrograph(plotstart, plotend, gaugei, Title=\"Lumped Model\")"
+    "Coello.plotHydrograph(plotstart, plotend, gaugei, Title=\"Lumped Model\")"
    ]
   },
   {
@@ -394,7 +394,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-24 00:25:14.873 | DEBUG    | catchment:SaveResults:1366 - Data is saved successfully\n"
+      "2022-02-24 00:25:14.873 | DEBUG    | catchment:saveResults:1366 - Data is saved successfully\n"
      ]
     }
    ],
@@ -403,7 +403,7 @@
     "EndDate = \"2010-04-20\"\n",
     "\n",
     "Path = SaveTo + \"Results-Lumped-Model_\" + str(dt.datetime.now())[0:10] + \".txt\"\n",
-    "Coello.SaveResults(Result=5, start=StartDate, end=EndDate, Path=Path)"
+    "Coello.saveResults(Result=5, start=StartDate, end=EndDate, Path=Path)"
    ]
   }
  ],
