--- a/examples/Hydrological model/Prepare Input Data/notebooks/01prepare_inputdata.ipynb
+++ b/examples/Hydrological model/Prepare Input Data/notebooks/01prepare_inputdata.ipynb
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### PrepareInputs \n",
+    "### prepareInputs \n",
     "this function takes the DEM as a template (rows and columns) and takes the folder where any raster data\n",
     "you want to match with exists\n",
     "\n",
@@ -114,7 +114,7 @@
    "outputs": [],
    "source": [
     "# Run the code \n",
-    "inputs.PrepareInputs(dem_path,prec_in_path,outputpath+\"prec\")"
+    "inputs.prepareInputs(dem_path,prec_in_path,outputpath+\"prec\")"
    ]
   },
   {
@@ -125,7 +125,7 @@
    "source": [
     "# evap\n",
     "evap_in_path=\"Data/meteodata/4000/complete_dataset/evap/\"\n",
-    "inputs.PrepareInputs(dem_path,evap_in_path,outputpath+\"evap\")"
+    "inputs.prepareInputs(dem_path,evap_in_path,outputpath+\"evap\")"
    ]
   },
   {
@@ -136,7 +136,7 @@
    "source": [
     "# temp\n",
     "temp_in_path=\"Data/meteodata/4000/complete_dataset/temp/\"\n",
-    "inputs.PrepareInputs(dem_path,temp_in_path,outputpath+\"temp\")"
+    "inputs.prepareInputs(dem_path,temp_in_path,outputpath+\"temp\")"
    ]
   },
   {
