--- a/examples/Hydrological model/Prepare Input Data/notebooks/05_Extract_Distributed_Parameters.ipynb
+++ b/examples/Hydrological model/Prepare Input Data/notebooks/05_Extract_Distributed_Parameters.ipynb
@@ -107,7 +107,7 @@
     }
    ],
    "source": [
-    "Inputs.ExtractParameters(dem_path, '03', AsRaster=True, SaveTo=outputpath)\n"
+    "Inputs.extractParameters(dem_path, '03', AsRaster=True, SaveTo=outputpath)\n"
    ]
   }
  ],
