--- a/examples/Hydrological model/Note books/Lumped-Model_Run.ipynb
+++ b/examples/Hydrological model/Note books/Lumped-Model_Run.ipynb
@@ -102,7 +102,7 @@
     "end = \"2011-12-31\"\n",
     "name = \"Coello\"\n",
     "Coello = Catchment(name, start, end)\n",
-    "Coello.ReadLumpedInputs(MeteoDataPath)"
+    "Coello.readLumpedInputs(MeteoDataPath)"
    ]
   },
   {
@@ -133,7 +133,7 @@
     "# [Snow pack, Soil moisture, Upper zone, Lower Zone, Water content]\n",
     "InitialCond = [0,10,10,10,0]\n",
     "\n",
-    "Coello.ReadLumpedModel(HBVLumped, AreaCoeff, InitialCond)"
+    "Coello.readLumpedModel(HBVLumped, AreaCoeff, InitialCond)"
    ]
   },
   {
@@ -160,7 +160,7 @@
    ],
    "source": [
     "Snow = 0 # no snow subroutine\n",
-    "Coello.ReadParameters(Parameterpath, Snow)"
+    "Coello.readParameters(Parameterpath, Snow)"
    ]
   },
   {
@@ -218,7 +218,7 @@
     }
    ],
    "source": [
-    "Coello.ReadDischargeGauges(Path + \"Qout_c.csv\", fmt=\"%Y-%m-%d\")"
+    "Coello.readDischargeGauges(Path + \"Qout_c.csv\", fmt=\"%Y-%m-%d\")"
    ]
   },
   {
@@ -280,7 +280,7 @@
     }
    ],
    "source": [
-    "Run.RunLumped(Coello, Route, RoutingFn)"
+    "Run.runLumped(Coello, Route, RoutingFn)"
    ]
   },
   {
@@ -370,7 +370,7 @@
     "gaugei = 0\n",
     "plotstart = \"2009-01-01\"\n",
     "plotend = \"2011-12-31\"\n",
-    "Coello.PlotHydrograph(plotstart, plotend, gaugei, Title= \"Lumped Model\")"
+    "Coello.plotHydrograph(plotstart, plotend, gaugei, Title= \"Lumped Model\")"
    ]
   },
   {
@@ -400,7 +400,7 @@
     "EndDate = \"2010-04-20\"\n",
     "\n",
     "Path = SaveTo + \"Results-Lumped-Model\" + str(dt.datetime.now())[0:10] + \".txt\"\n",
-    "Coello.SaveResults(Result=5, StartDate=StartDate, EndDate=EndDate, Path=Path)"
+    "Coello.saveResults(Result=5, StartDate=StartDate, EndDate=EndDate, Path=Path)"
    ]
   }
  ],
