--- a/examples/Hydrological model/Note books/Lumped_Model_Calib.ipynb
+++ b/examples/Hydrological model/Note books/Lumped_Model_Calib.ipynb
@@ -94,7 +94,7 @@
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
       "Input \u001B[1;32mIn [3]\u001B[0m, in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      3\u001B[0m name \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mCoello\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m      5\u001B[0m Coello \u001B[38;5;241m=\u001B[39m Calibration(name, start, end)\n\u001B[1;32m----> 6\u001B[0m \u001B[43mCoello\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mReadLumpedInputs\u001B[49m\u001B[43m(\u001B[49m\u001B[43mMeteoDataPath\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32mC:\\MyComputer\\01Algorithms\\hydrology\\Hapi\\Hapi\\catchment.py:622\u001B[0m, in \u001B[0;36mCatchment.ReadLumpedInputs\u001B[1;34m(self, Path, ll_temp)\u001B[0m\n\u001B[0;32m    596\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mReadLumpedInputs\u001B[39m(\n\u001B[0;32m    597\u001B[0m         \u001B[38;5;28mself\u001B[39m,\n\u001B[0;32m    598\u001B[0m         Path: \u001B[38;5;28mstr\u001B[39m,\n\u001B[0;32m    599\u001B[0m         ll_temp: Union[\u001B[38;5;28mlist\u001B[39m, np\u001B[38;5;241m.\u001B[39mndarray]\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m\n\u001B[0;32m    600\u001B[0m ):\n\u001B[0;32m    601\u001B[0m     \u001B[38;5;124;03m\"\"\"ReadLumpedInputs.\u001B[39;00m\n\u001B[0;32m    602\u001B[0m \n\u001B[0;32m    603\u001B[0m \u001B[38;5;124;03m    ReadLumpedInputs method read the meteorological data of lumped mode\u001B[39;00m\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    620\u001B[0m \u001B[38;5;124;03m        average long term temperature.\u001B[39;00m\n\u001B[0;32m    621\u001B[0m \u001B[38;5;124;03m    \"\"\"\u001B[39;00m\n\u001B[1;32m--> 622\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mdata \u001B[38;5;241m=\u001B[39m \u001B[43mpd\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mread_csv\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m    623\u001B[0m \u001B[43m        \u001B[49m\u001B[43mPath\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mheader\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdelimiter\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43m,\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mindex_col\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m  \u001B[49m\u001B[38;5;66;43;03m# \"\\t\", #skiprows=11,\u001B[39;49;00m\n\u001B[0;32m    624\u001B[0m \u001B[43m    \u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    625\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mdata \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mdata\u001B[38;5;241m.\u001B[39mvalues\n\u001B[0;32m    627\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m ll_temp \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n",
+      "File \u001B[1;32mC:\\MyComputer\\01Algorithms\\hydrology\\Hapi\\Hapi\\catchment.py:622\u001B[0m, in \u001B[0;36mCatchment.readLumpedInputs\u001B[1;34m(self, Path, ll_temp)\u001B[0m\n\u001B[0;32m    596\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mReadLumpedInputs\u001B[39m(\n\u001B[0;32m    597\u001B[0m         \u001B[38;5;28mself\u001B[39m,\n\u001B[0;32m    598\u001B[0m         Path: \u001B[38;5;28mstr\u001B[39m,\n\u001B[0;32m    599\u001B[0m         ll_temp: Union[\u001B[38;5;28mlist\u001B[39m, np\u001B[38;5;241m.\u001B[39mndarray]\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m\n\u001B[0;32m    600\u001B[0m ):\n\u001B[0;32m    601\u001B[0m     \u001B[38;5;124;03m\"\"\"readLumpedInputs.\u001B[39;00m\n\u001B[0;32m    602\u001B[0m \n\u001B[0;32m    603\u001B[0m \u001B[38;5;124;03m    readLumpedInputs method read the meteorological data of lumped mode\u001B[39;00m\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    620\u001B[0m \u001B[38;5;124;03m        average long term temperature.\u001B[39;00m\n\u001B[0;32m    621\u001B[0m \u001B[38;5;124;03m    \"\"\"\u001B[39;00m\n\u001B[1;32m--> 622\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mdata \u001B[38;5;241m=\u001B[39m \u001B[43mpd\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mread_csv\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m    623\u001B[0m \u001B[43m        \u001B[49m\u001B[43mPath\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mheader\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdelimiter\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43m,\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mindex_col\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m  \u001B[49m\u001B[38;5;66;43;03m# \"\\t\", #skiprows=11,\u001B[39;49;00m\n\u001B[0;32m    624\u001B[0m \u001B[43m    \u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    625\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mdata \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mdata\u001B[38;5;241m.\u001B[39mvalues\n\u001B[0;32m    627\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m ll_temp \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n",
       "File \u001B[1;32m~\\anaconda\\envs\\py310\\lib\\site-packages\\pandas\\util\\_decorators.py:311\u001B[0m, in \u001B[0;36mdeprecate_nonkeyword_arguments.<locals>.decorate.<locals>.wrapper\u001B[1;34m(*args, **kwargs)\u001B[0m\n\u001B[0;32m    305\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mlen\u001B[39m(args) \u001B[38;5;241m>\u001B[39m num_allow_args:\n\u001B[0;32m    306\u001B[0m     warnings\u001B[38;5;241m.\u001B[39mwarn(\n\u001B[0;32m    307\u001B[0m         msg\u001B[38;5;241m.\u001B[39mformat(arguments\u001B[38;5;241m=\u001B[39marguments),\n\u001B[0;32m    308\u001B[0m         \u001B[38;5;167;01mFutureWarning\u001B[39;00m,\n\u001B[0;32m    309\u001B[0m         stacklevel\u001B[38;5;241m=\u001B[39mstacklevel,\n\u001B[0;32m    310\u001B[0m     )\n\u001B[1;32m--> 311\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m func(\u001B[38;5;241m*\u001B[39margs, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs)\n",
       "File \u001B[1;32m~\\anaconda\\envs\\py310\\lib\\site-packages\\pandas\\io\\parsers\\readers.py:680\u001B[0m, in \u001B[0;36mread_csv\u001B[1;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, error_bad_lines, warn_bad_lines, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options)\u001B[0m\n\u001B[0;32m    665\u001B[0m kwds_defaults \u001B[38;5;241m=\u001B[39m _refine_defaults_read(\n\u001B[0;32m    666\u001B[0m     dialect,\n\u001B[0;32m    667\u001B[0m     delimiter,\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    676\u001B[0m     defaults\u001B[38;5;241m=\u001B[39m{\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdelimiter\u001B[39m\u001B[38;5;124m\"\u001B[39m: \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m,\u001B[39m\u001B[38;5;124m\"\u001B[39m},\n\u001B[0;32m    677\u001B[0m )\n\u001B[0;32m    678\u001B[0m kwds\u001B[38;5;241m.\u001B[39mupdate(kwds_defaults)\n\u001B[1;32m--> 680\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43m_read\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfilepath_or_buffer\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mkwds\u001B[49m\u001B[43m)\u001B[49m\n",
       "File \u001B[1;32m~\\anaconda\\envs\\py310\\lib\\site-packages\\pandas\\io\\parsers\\readers.py:575\u001B[0m, in \u001B[0;36m_read\u001B[1;34m(filepath_or_buffer, kwds)\u001B[0m\n\u001B[0;32m    572\u001B[0m _validate_names(kwds\u001B[38;5;241m.\u001B[39mget(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mnames\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;28;01mNone\u001B[39;00m))\n\u001B[0;32m    574\u001B[0m \u001B[38;5;66;03m# Create the parser.\u001B[39;00m\n\u001B[1;32m--> 575\u001B[0m parser \u001B[38;5;241m=\u001B[39m TextFileReader(filepath_or_buffer, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwds)\n\u001B[0;32m    577\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m chunksize \u001B[38;5;129;01mor\u001B[39;00m iterator:\n\u001B[0;32m    578\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m parser\n",
@@ -111,7 +111,7 @@
     "name = \"Coello\"\n",
     "\n",
     "Coello = Calibration(name, start, end)\n",
-    "Coello.ReadLumpedInputs(MeteoDataPath)"
+    "Coello.readLumpedInputs(MeteoDataPath)"
    ]
   },
   {
@@ -144,7 +144,7 @@
     "InitialCond = [0, 10, 10, 10, 0]\n",
     "# no snow subroutine\n",
     "Snow = 0\n",
-    "Coello.ReadLumpedModel(HBVLumped, AreaCoeff, InitialCond)"
+    "Coello.readLumpedModel(HBVLumped, AreaCoeff, InitialCond)"
    ]
   },
   {
@@ -180,7 +180,7 @@
     "LB = LB[1].tolist()\n",
     "\n",
     "Maxbas = True\n",
-    "Coello.ReadParametersBounds(UB, LB, Snow, Maxbas=Maxbas)"
+    "Coello.readParametersBounds(UB, LB, Snow, Maxbas=Maxbas)"
    ]
   },
   {
@@ -231,12 +231,12 @@
    ],
    "source": [
     "# outlet discharge\n",
-    "Coello.ReadDischargeGauges(Path + \"Qout_c.csv\", fmt=\"%Y-%m-%d\")\n",
+    "Coello.readDischargeGauges(Path + \"Qout_c.csv\", fmt=\"%Y-%m-%d\")\n",
     "\n",
     "OF_args = []\n",
     "OF = PC.RMSE\n",
     "\n",
-    "Coello.ReadObjectiveFn(PC.RMSE, OF_args)"
+    "Coello.readObjectiveFn(PC.RMSE, OF_args)"
    ]
   },
   {
@@ -311,7 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cal_parameters = Coello.LumpedCalibration(Basic_inputs, OptimizationArgs, printError=None)\n",
+    "cal_parameters = Coello.lumpedCalibration(Basic_inputs, OptimizationArgs, printError=None)\n",
     "\n",
     "print(\"Objective Function = \" + str(round(cal_parameters[0], 2)))\n",
     "print(\"Parameters are \" + str(cal_parameters[1]))\n",
@@ -344,7 +344,7 @@
    "outputs": [],
    "source": [
     "Coello.Parameters = cal_parameters[1]\n",
-    "Run.RunLumped(Coello, Route, RoutingFn)"
+    "Run.runLumped(Coello, Route, RoutingFn)"
    ]
   },
   {
@@ -397,7 +397,7 @@
     "gaugei = 0\n",
     "plotstart = \"2009-01-01\"\n",
     "plotend = \"2011-12-31\"\n",
-    "Coello.PlotHydrograph(plotstart, plotend, gaugei, Title=\"Lumped Model\")"
+    "Coello.plotHydrograph(plotstart, plotend, gaugei, Title=\"Lumped Model\")"
    ]
   },
   {
@@ -440,7 +440,7 @@
     "EndDate = \"2010-04-20\"\n",
     "\n",
     "Path = Path + \"Results-Lumped-Model\" + str(dt.datetime.now())[0:10] + \".txt\"\n",
-    "Coello.SaveResults(Result=5, StartDate=StartDate, EndDate=EndDate, Path=Path)"
+    "Coello.saveResults(Result=5, StartDate=StartDate, EndDate=EndDate, Path=Path)"
    ]
   }
  ],
